# aeroforge-cfd-platform

./: .gitattributes  README.md  package.json
backend/: Cargo.toml
backend/src/: main.rs  models.rs  pipeline.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/src/components/: DebugConsole.tsx  ModelUploadPanel.tsx  SimulationViewer.tsx
frontend/src/components/three/: AirflowParticles.tsx  ModelPreview.tsx  PressureCloud.tsx  VectorField.tsx  WakeRibbons.tsx
frontend/src/utils/: field.ts
